[package]
name = "gasconade"
version = "0.1.0"
authors = ["Tom Parker <palfrey@tevp.net>"]

[dependencies]
schemamama = "*"
schemamama_postgres = "*"
url = "*"
postgres = {features=["with-uuid","with-serde_json"], version="^0.13"}
iron = "*"
plugin = "*"
router = "*"
logger = "*"
log = "*"
log4rs = {version = ">= 0.4", features=["yaml_format"]}
r2d2 = "*"
r2d2_postgres = "^0.11"
persistent = "*"
mustache = "0.8.1"
mime = "*"
lazy_static = "*"
regex = "0.2"
params = "*"
reqwest = "*"
serde = "1.0"
serde_yaml = "*"
serde_derive = "1.0"
base64 = "0.6.0"
rustc-serialize = "0.3"