[package]
name = "gasconade"
version = "0.1.0"
authors = ["Tom Parker <palfrey@tevp.net>"]

[dependencies]
schemamama = "*"
schemamama_postgres = "=0.2.2"
url = "*"
postgres = {features=["with-uuid","with-serde_json"], version="^0.15"}
iron = "*"
plugin = "*"
router = "*"
logger = "*"
log = "*"
log4rs = {version = ">= 0.4", features=["yaml_format"]}
r2d2 = "*"
r2d2_postgres = "^0.14"
persistent = "*"
mustache = "0.9"
mime = "0.2" # because iron
lazy_static = "*"
regex = "1"
params = "*"
reqwest = {version="0.9", default_features=false, features=["rustls-tls"]}
serde = "1.0"
serde_yaml = ">= 0.8.4"
serde_derive = "1.0"
base64 = "0.9"
rustc-serialize = "0.3"
error-chain = "*"